--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/task_hub
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/task_hub
+spring.datasource.username=postgres
+spring.datasource.password=postgres
