--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/task_hub
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
