--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/task_hub
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskhub
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
