--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/taskhub
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.batch.job.enabled = false
