--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.batch.job.enabled = false
+
+server.error.include-message=always
